FIX: Grid layout making it unresponsive on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -395,7 +395,7 @@ a {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2px;
 }
 
